[package]
name = "random-keygen"
edition = "2021"
version = "0.1.0"
authors = ["Matthias Roels <mroels2@its.jnj.com>"]
description = "🔑 A simple static random token generator."
keywords = ["password", "password-generator", "random", "key", "security-tools"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
autoclap = "0.3.15"
clap = { version = "4.2.5", features = ["cargo", "string"] }
custom_error = "1.9.2"
rand = "0.8"

